# dr_poc

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/config/: __init__.py  config_loader.py  dr_config.py  dr_config.yaml  settings.py
src/jobs/: __init__.py  dr_job.py  example_job.py
src/utils/: __init__.py  spark_utils.py
tests/: __init__.py  test_dr_job.py  test_example_job.py  test_settings.py  test_spark_utils.py
